k8s/mq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mq
  template:
    metadata:
      labels:
        component: mq
    spec:
      containers:
        - name: mq
          image: rabbitmq:3.12.2-alpine
          ports:
            - containerPort: 5672
