k8s/rabbitmq-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-stateful-set
spec:
  replicas: 1
  serviceName: rabbitmq
  selector:
    matchLabels:
      component: rabbitmq
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
          ports:
            - containerPort: 5672
              name: rmq
            - containerPort: 15672
              name: rmq-mgmt
      volumes:
        - name: rabbitmq-data
          hostPath:
            path: /data/rabbitmq
            type: DirectoryOrCreate
