k8s/mq-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mq
  ports:
    - port: 5672
      targetPort: 5672
