k8s/webapp-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: webapp
  ports:
    - port: 3000
      targetPort: 3000
